# fhtmx-testdrive

./: .gitignore  README.md  pyproject.toml
src/: database.py  main.py  routes.py
src/greet/: routes.py
src/heroes/: routes.py
src/todos/: models.py  routes.py
templates/: index.html  todo.html  todos.html
templates/base/: base.html
templates/includes/: footer.html  header.html
templates/layout/: base.html
templates/pages/: todos.html
templates/partials/: todo_item.html  todo_list.html
